# fastads

./: .gitignore  README.md  fastads_streamlit_app.py  main.py  pyproject.toml  requirements.txt  sample_ads.json
.devcontainer/: devcontainer.json
data/jobs/948fdf1df701/: job_config.json  pipeline_output.json
src/fastads/: cli.py  config.py  models.py  pipeline.py  storage.py
src/fastads/providers/: llm.py
src/fastads/services/: media.py
