[project]
name = "fastads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
