[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-api-python-client>=2.186.0",
    "httpx>=0.28.1",
    "edge-tts>=7.0.0",
    "jinja2>=3.1.6",
    "openai>=2.30.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
    "yt-dlp>=2026.4.10.235301.dev0",
]

[project.scripts]
fastads = "fastads.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fastads"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
